build db image and fix librarydb healthcheck

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
         - default
     command: --innodb-flush-method=fsync --innodb-use-native-aio=0
     healthcheck:
-      test: "/usr/bin/mysql --user=root --password=$$MYSQL_ROOT_PASSWORD --execute \"SHOW DATABASES;\""
+      test: "mariadb --user=root --password=${DB_ROOT_PASSWORD} --execute \"SHOW DATABASES;\""
       timeout: 2s
       retries: 10
     ports:
@@ -30,7 +30,7 @@ services:
 
 
   libraryapp:
-    image: ces-books:4.0
+    build: .
     environment:
       DATABASE: mysql://${DB_APPLICATION_USER}:${DB_APPLICATION_PASSWORD}@librarydb:3306/${DB_NAME}
     networks:
